--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "scripts": {
     "lint:js": "eslint src",
-    "start": "npm run build:dev && webpack-dev-server",
-    "test:prod": "npm run lint:js &&npm run build:prod && webpack-dev-server",
-    "build:dev": "rimraf dist && cross-env NODE_ENV=dev webpack",
-    "build:prod": "rimraf dist && cross-env NODE_ENV=production webpack",
+    "start": "npm run start:server & npm run start:client",
+    "start:client": "npm run build:client:dev && npm run wds",
+    "start:server": "nodemon --exec babel-node src/server",
+    "test:prod": "npm run lint:js && npm run build:client:prod && npm run wds",
+    "build:client:dev": "rimraf dist && cross-env NODE_ENV=dev webpack",
+    "build:client:prod": "rimraf dist && cross-env NODE_ENV=production webpack",
+    "wds": "webpack-dev-server --content-base dist/ --host 0.0.0.0 --watch-content-base",
     "precommit": "npm run lint:js",
     "prepush": "npm run lint:js",
-    "deploy": "npm run build:prod && git add . && git commit -m ':rocket: deploy' && git push && git subtree push --prefix dist origin gh-pages"
+    "deploy": "npm run build:client:prod && git add . && git commit -m ':rocket: deploy' && git push && git subtree push --prefix dist origin gh-pages"
   },
   "author": "Naomi Hauret",
   "license": "MIT",
@@ -34,6 +37,7 @@
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
+    "nodemon": "^1.12.1",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "socket.io": "^2.0.3",
