--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Naomi Hauret",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
@@ -48,6 +49,7 @@
   },
   "dependencies": {
     "@tweenjs/tween.js": "^17.1.1",
+    "mongoose": "^4.12.1",
     "socket.io-client": "^2.0.3",
     "three": "^0.87.1"
   }
