--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint:js": "eslint src",
     "start": "npm run start:server & npm run start:client",
     "start:client": "npm run build:client:dev && npm run wds",
-    "start:server": "nodemon --exec babel-node src/server",
+    "start:server": "babel-node src/server",
     "test:prod": "npm run lint:js && npm run build:client:prod && npm run wds",
     "build:client:dev": "rimraf dist && cross-env NODE_ENV=dev webpack",
     "build:client:prod": "rimraf dist && cross-env NODE_ENV=production webpack",
@@ -37,7 +37,6 @@
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
-    "nodemon": "^1.12.1",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "socket.io": "^2.0.3",
@@ -47,7 +46,8 @@
     "webpack-dev-server": "^2.9.1"
   },
   "dependencies": {
-    "@tweenjs/tween.js": "^17.1.1",
+    "es6-tween": "^3.8.24",
+    "gsap": "^1.20.3",
     "socket.io-client": "^2.0.3",
     "three": "^0.87.1"
   }
