--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,10 @@
             1,
             "never"
         ],
+        "indent": [
+            "warning",
+            2
+        ],
         "linebreak-style": [
             2,
             "unix"
