--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
             1,
             "never"
         ],
+        "indent-size": [error, 2],
         "linebreak-style": [
             2,
             "unix"
