--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "gsap": "^1.20.3",
-    "mongoose": "^4.12.1",
+    "mongoose": "^5.0.0-rc2",
     "socket.io-client": "^2.0.3",
-    "three": "^0.87.1"
+    "three": "^0.89.0"
   }
 }
