--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gsap": "^1.20.3",
     "mongoose": "^5.0.0-rc2",
     "socket.io-client": "^2.0.3",
+    "sweetalert2": "^7.3.5",
     "three": "^0.89.0",
     "whatwg-fetch": "^2.0.3"
   }
